find faces working

--- a/ProcSim.uproject
+++ b/ProcSim.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "{6D081DB1-42A6-2BF5-DD40-5B8A2767C3D3}",
+	"EngineAssociation": "4.27",
 	"Category": "",
 	"Description": "",
 	"Modules": [
